Fix valign

--- a/common.css
+++ b/common.css
@@ -298,7 +298,7 @@ a:active
 }
 
 #storylineText {
-	vertical-align:middle;
+	vertical-align:-13px;
 }
 
 .floatbox{
